--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "start": "./node_modules/.bin/nodemon -L backend_server/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.3"
   }
 }
