--- a/frontend_app/package.json
+++ b/frontend_app/package.json
@@ -18,6 +18,8 @@
     "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
+
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
