--- a/frontend_app/package.json
+++ b/frontend_app/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.26.0",
     "bootstrap": "^3.4.1",
     "cors": "^2.8.5",
+    "history": "^5.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
@@ -18,7 +19,6 @@
     "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
-
   "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
