--- a/frontend_app/package.json
+++ b/frontend_app/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
-    "bootstrap": "^3.4.1",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "history": "^5.2.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
